--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
+    />
     <title>React.ts playground</title>
   </head>
   <body>
